--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -2,56 +2,59 @@
 
 @import 'imports/astra';
 @import 'imports/minimal-mistakes'; // main partials
-@import 'imports/minimal-mistakes-overrides'; 
+@import 'imports/minimal-mistakes-overrides';
 @import 'imports/utilities';
 @import 'imports/cards';
 
 @import 'imports/section-link';
 
-
 // Space and align the chevron icon
 #main a svg {
-  margin-left: 1ex;
-  vertical-align: -.2em;
+    margin-left: 1ex;
+    vertical-align: -0.2em;
 }
 
 .avatar-md {
-  border-radius: 50%;
-  width: 64px;
-  height: 64px;
-  border: 2px solid white;
+    border-radius: 50%;
+    width: 64px;
+    height: 64px;
+    border: 2px solid white;
 }
 
-
 .avatar-lg {
-  border-radius: 50%;
-  width: 128px;
-  height: 128px;
-  border: 2px solid white;
+    border-radius: 50%;
+    width: 128px;
+    height: 128px;
+    border: 2px solid white;
 }
 
 .hero-container {
-  position: relative;
+    position: relative;
 }
 
 .hero-container h2 {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 50%;
-  height: 100%;
-  text-align: right;
-  margin: 0;
-  padding-top: 20%;
-  border: none;
-  font-size: 3em;
-  line-height: .8;
-  background: #fff;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 80%)  66%, white 100%)
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 100%;
+    text-align: right;
+    margin: 0;
+    padding-top: 20%;
+    border: none;
+    font-size: 3em;
+    line-height: 0.8;
+    background: #fff;
+    background: linear-gradient(
+        90deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 80%) 66%,
+        white 100%
+    );
 }
 
 a.chevron::after {
-  width: calc((2/9)*3em);
-  height: 3em;
-  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2 9'%3E%3Cpath d='M-.1 0L2 4.5L-.1 9Z' fill='currentcolor'/%3E%3C/svg%3E");
+    width: calc((2 / 9) * 3em);
+    height: 3em;
+    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2 9'%3E%3Cpath d='M-.1 0L2 4.5L-.1 9Z' fill='currentcolor'/%3E%3C/svg%3E");
 }
