--- a/src/_sass/wide.scss
+++ b/src/_sass/wide.scss
@@ -268,7 +268,7 @@ section.fullwidth p {
 
 .cards.col2 .figure,
 .cards.col3 .figure {
-    flex-grow: 0;
+    // flex-grow: 0;
     padding: 0;
     border-radius: 8px;
     & img {
