--- a/src/_sass/imports/minimal-mistakes-overrides.scss
+++ b/src/_sass/imports/minimal-mistakes-overrides.scss
@@ -29,9 +29,9 @@ pre {
     margin-bottom: 1em;
     padding: 1em;
     background: #35434e;
-    color: #c5c8c6;
+    color: #dadada;
     font-family: $monospace;
     font-size: .75em;
-    line-height: 1.8;
+    line-height: 1.3;
     border-radius: 8px;
 }
