--- a/src/_sass/imports/minimal-mistakes/_navigation.scss
+++ b/src/_sass/imports/minimal-mistakes/_navigation.scss
@@ -429,9 +429,8 @@
     }
 
     .active {
-        margin-left: -0.5em;
-        padding-left: 0.5em;
-        padding-right: 0.5em;
+        padding: 4px 4px 4px 8px;
+        margin-left: -8px;
         font-weight: bold;
     }
 
