--- a/src/_sass/imports/minimal-mistakes/_sidebar.scss
+++ b/src/_sass/imports/minimal-mistakes/_sidebar.scss
@@ -59,9 +59,8 @@
     li {
         font-family: $sans-serif;
         font-size: $type-size-5;
-        line-height: 1.5;
-        padding: 4px;
-        padding-left: 8px;
+        line-height: 1;
+        padding: 4px 4px 4px 8px;
         border-radius: 4px;
 
         a {
