feat: improved layout of tables

--- a/src/_sass/imports/minimal-mistakes/_navigation.scss
+++ b/src/_sass/imports/minimal-mistakes/_navigation.scss
@@ -224,6 +224,10 @@
             -ms-flex: none;
             flex: none;
         }
+        li:hover {
+          background: #eee;
+          border-radius: 5px;
+        }
 
         a {
             position: relative;
