--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -5,6 +5,7 @@
 @import 'imports/minimal-mistakes-overrides';
 @import 'imports/utilities';
 @import 'imports/cards';
+@import 'imports/tables';
 
 @import 'imports/section-link';
 
