--- a/src/_includes/masthead.html
+++ b/src/_includes/masthead.html
@@ -17,14 +17,18 @@
         </a>
         <ul class="visible-links">
           {%- for link in navigation.main -%}
-            {%- if link.url contains '://' -%}
-              {%- assign url = link.url -%}
-            {%- else -%}
-              {%- assign url = link.url | relative_url -%}
+            {%- if link.url -%}
+              {%- if link.url contains '://' -%}
+                {%- assign url = link.url -%}
+              {%- else -%}
+                {%- assign url = link.url | relative_url -%}
+              {%- endif -%}
+              <li class="masthead__menu-item">
+                <a href="{{ url }}" {% if link.description %}title="{{ link.description }}"{% endif %}>{{ link.title }}</a>
+              </li>
+            {%- elsif link.separator -%}
+            <li class="masthead__menu-item separator"></li>
             {%- endif -%}
-            <li class="masthead__menu-item">
-              <a href="{{ url }}" {% if link.description %}title="{{ link.description }}"{% endif %}>{{ link.title }}</a>
-            </li>
           {%- endfor -%}
         </ul>
         {% if site.search == true %}
