--- a/src/_includes/nav_list.liquid
+++ b/src/_includes/nav_list.liquid
@@ -23,20 +23,26 @@
         <ul>
           {% for child in nav.children %}
             {% comment %} internal/external URL check {% endcomment %}
-            {% if child.url contains "://" %}
-              {% assign child_url = child.url %}
-            {% else %}
-              {% assign child_url = child.url | relative_url %}
-            {% endif %}
+            {% if child.url %}
+              {% if child.url contains "://" %}
+                {% assign child_url = child.url %}
+              {% else %}
+                {% assign child_url = child.url | relative_url %}
+              {% endif %}
 
-            {% comment %} set "active" class on current page {% endcomment %}
-            {% if child.url == page.url %}
-              {% assign active = "active" %}
-            {% else %}
-              {% assign active = "" %}
-            {% endif %}
+              {% comment %} set "active" class on current page {% endcomment %}
+              {% if child.url == page.url %}
+                {% assign active = "active" %}
+              {% else %}
+                {% assign active = "" %}
+              {% endif %}
 
-            <li><a href="{{ child_url }}" class="{{ active }}">{{ child.title }}</a></li>
+              <li><a href="{{ child_url }}" class="{{ active }}">{{ child.title }}</a></li>
+            {% elsif child.separator %}
+              <li class="separator"></li>
+            {% elsif child.title %}
+              <li class="sub-title">{{ child.title }}</li>
+            {% endif %}
           {% endfor %}
         </ul>
         {% endif %}
