--- a/src/_sass/imports/minimal-mistakes/_sidebar.scss
+++ b/src/_sass/imports/minimal-mistakes/_sidebar.scss
@@ -60,15 +60,15 @@
         font-family: $sans-serif;
         font-size: $type-size-5;
         line-height: 1;
-        padding: 4px 4px 4px 8px;
+        padding: 8px 4px 8px 8px;
         border-radius: 4px;
 
         a {
             display: block;
             border-radius: 4px;
             &.active {
-                color: white !important;
-                background: $primary;
+              color: white !important;
+              background: $primary;
             }
         }
     }
@@ -82,9 +82,17 @@
         }
     }
 }
+#main .sidebar a:not(.section-link):hover {
+  text-decoration: none;
+
+}
 
 .sidebar ul:not(.nav__items) li:hover {
     background: rgba(0, 0, 0, 0.05);
+}
+
+.sidebar ul:not(.nav__items) li.separator:hover {
+  background: none;
 }
 
 .sidebar__right {
