feat: fixed width of first column

--- a/src/_sass/imports/tables.scss
+++ b/src/_sass/imports/tables.scss
@@ -44,6 +44,9 @@
 .symbols-table table {
   table-layout: auto;
   tr td:first-child {
-    width: 16ex;
+    min-width: 15ex;
+    // Insane trick to make sure the column is no wider than it needs to.
+    width: 1ex;
+    white-space: nowrap;  
   }
 }
