--- a/src/_sass/imports/minimal-mistakes/_page.scss
+++ b/src/_sass/imports/minimal-mistakes/_page.scss
@@ -280,6 +280,11 @@ body {
     text-transform: uppercase;
 }
 
+.page__meta-link {
+  margin-bottom: 10px;
+  font-size: $type-size-6;
+}
+
 /*
    Page taxonomy
    ========================================================================== */
