--- a/src/_sass/imports/astra.scss
+++ b/src/_sass/imports/astra.scss
@@ -30,10 +30,10 @@ $primary-color: #0066ce !default !global;
   $background-color: #fff !default !global;
   /* Colors */
   $card-background-color: #fafafa !default !global;
-  $text-color: #000 !default !global;
-  $muted-text-color: $text-color !default !global;
+  $text-color: #333 !default !global;
+  // $muted-text-color: $text-color !default !global;
   $border-color: mix(#fff, $text-color, 85%) !default !global;
-  $footer-background-color: #000 !default !global;
+  $footer-background-color: #334 !default !global;
   $link-color: $primary-color !default !global;
   $masthead-link-color: $text-color !default !global;
   $masthead-link-color-hover: $text-color !default !global;
