doc: layout: if the content is narrow or not as tall as the viewport, don't center it.

--- a/src/_sass/imports/minimal-mistakes/_page.scss
+++ b/src/_sass/imports/minimal-mistakes/_page.scss
@@ -40,7 +40,11 @@ body {
 
 .page {
     max-width: 760px;
-    margin: auto;
+    width: 100%;
+    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+    
     // @include breakpoint($large) {
     //   float: right;
     //   width: calc(100% - #{$right-sidebar-width-narrow});
