--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="referrer" content="strict-origin" />
 
-<script>
+<script defer>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
 
@@ -18,7 +18,7 @@
     {% else %}
       {% capture script_path %}{{ x | relative_url }}{% endcapture %}
     {% endif %}
-    <script src="{{ script_path }}" crossorigin='anonymous'></script>
+    <script defer src="{{ script_path }}" crossorigin='anonymous'></script>
   {% endfor %}
 {% endif %}
 
@@ -29,7 +29,7 @@
     {% else %}
       {% capture script_path %}{{ x | relative_url }}{% endcapture %}
     {% endif %}
-    <script type="module" src="{{ script_path }}" crossorigin='anonymous'></script>
+    <script defer type="module" src="{{ script_path }}" crossorigin='anonymous'></script>
   {% endfor %}
 {% endif %}
 
@@ -53,7 +53,7 @@
     {% else %}
       {% capture script_path %}{{ script | relative_url }}{% endcapture %}
     {% endif %}
-    <script src="{{ script_path }}"></script>
+    <script defer src="{{ script_path }}"></script>
   {% endfor %}
 {% endif %}
 
