doc: incorporate Kenny's feedback

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -1,4 +1,8 @@
 <meta charset="utf-8">
+{% if head.redirect %}
+  <meta http-equiv="refresh" content="0; url={{ head.redirect }}" />
+{% endif %}
+
 
 {% include seo.html %}
 
